--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,90 +1,46 @@
 @font-face {
-    font-family: 'Gambetta-LightItalic';
-    src: url('../../assets/fuentes/fonts/Gambetta-LightItalic.woff2') format('woff2'),
-        url('../../assets/fuentes/fonts/Gambetta-LightItalic.woff') format('woff'),
-        url('../../assets/fuentes/fonts/Gambetta-LightItalic.ttf') format('truetype');
-    font-weight: 300;
-    font-display: swap;
-    font-style: italic;
+  font-family: "Gambetta-LightItalic";
+  src: url("../../assets/fuentes/fonts/Gambetta-LightItalic.woff2")
+      format("woff2"),
+    url("../../assets/fuentes/fonts/Gambetta-LightItalic.woff") format("woff"),
+    url("../../assets/fuentes/fonts/Gambetta-LightItalic.ttf")
+      format("truetype");
+  font-weight: 300;
+  font-display: swap;
+  font-style: italic;
 }
 
 .principalText {
-    font-family: 'Satoshi-Light', serif;
+  font-family: "Satoshi-Light", serif;
+  font-weight: 800;
 }
 
 .secondaryText {
-    font-family: 'Gambetta-LightItalic', serif;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: "Gambetta-LightItalic", serif;
+  font-weight: 500;
 }
 
 .parrafo1 {
-    font-family: 'Satoshi-Regular', serif;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 800;
-    animation: neon1 1.5s ease-in-out infinite alternate;
-    /* keyframes */
-    /*   text-shadow: 0 0 5px #f562ff, 0 0 15px #f562ff, 0 0 25px #f562ff,
-      0 0 20px #f562ff, 0 0 30px #890092, 0 0 80px #890092, 0 0 80px #890092;
-    color: #fccaff; */
-    text-shadow: 0 0 5px #FFE70B, 0 0 5px #FFE70B, 0 0 5px #FFE70B, 0 0 40px #FFE70B, 0 0 20px #ff0000, 0 0 10px #FFE70B, 0 0 50px #FFE70B;
-    color: #fff6a9;
-    text-align: center;
-    animation: blink 12s infinite;
-    -webkit-animation: blink 12s infinite;
-
+  font-family: "Satoshi-Regular", serif;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+  color: #fff6a9;
+  text-align: center;
 }
-
-.wrapperSkills div > svg{
-    dropshadow: #ff8d00 0px 0px 10px 5px;
+.descriptionText {
+  font-family: "Satoshi-Regular", serif;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-weight: 300;
+  color: #fff6a9;
+  text-align: center;
 }
-@-webkit-keyframes blink {
-
-    20%,
-    24%,
-    55% {
-        color: #111;
-        text-shadow: none;
-    }
-
-    0%,
-    19%,
-    21%,
-    23%,
-    25%,
-    54%,
-    56%,
-    100% {
-        /*     color: #fccaff;
-      text-shadow: 0 0 5px #f562ff, 0 0 15px #f562ff, 0 0 25px #f562ff,
-        0 0 20px #f562ff, 0 0 30px #890092, 0 0 80px #890092, 0 0 80px #890092; */
-        text-shadow: 0 0 5px #FFE70B, 0 0 15px #FFE70B, 0 0 20px #FFE70B, 0 0 40px #FFE70B, 0 0 60px #ff0000, 0 0 10px #FFE70B, 0 0 98px #ff0000;
-        color: #fff6a9;
-    }
-}
-
-@keyframes blink {
-
-    20%,
-    24%,
-    55% {
-        color: #111;
-        text-shadow: none;
-    }
-
-    0%,
-    19%,
-    21%,
-    23%,
-    25%,
-    54%,
-    56%,
-    100% {
-        /*     color: #fccaff;
-      text-shadow: 0 0 5px #f562ff, 0 0 15px #f562ff, 0 0 25px #f562ff,
-        0 0 20px #f562ff, 0 0 30px #890092, 0 0 80px #890092, 0 0 80px #890092; */
-        text-shadow: 0 0 5px #FFE70B, 0 0 15px #FFE70B, 0 0 20px #FFE70B, 0 0 40px #FFE70B, 0 0 60px #ff0000, 0 0 10px #FFE70B, 0 0 98px #ff0000;
-        color: #fff6a9;
-    }
+.wrapper-misServicios:hover {
+  cursor: pointer;
 }
