--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -1,4 +1,5 @@
 .sectionWork{
+    max-width: 1400px;
     place-content: flex-start center;
     align-items: center;
     display: flex;
@@ -11,7 +12,21 @@
     position: relative;
     width: 100%;
 }
+.wrapperTittleWork{
+    width: 100%;
+}
 
+.tittleWork{
+    font-family: 'Satoshi-Light', serif;
+}
+.flecha45{
+    width: 32px;
+    height: 32px;
+}
+.viewAll{
+    font-family: 'Satoshi-Regular';
+    width: 70px;
+}
 .framerWork{
     place-content: flex-start center;
     align-items: center;
