--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -12,6 +12,7 @@
     box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
     height: 60px;
     margin: auto;
+    margin-top: 10px;
     overflow: hidden;
     position: relative;
     width: 800px;
@@ -25,7 +26,7 @@
     width: 200px;
     z-index: 2;
   }
-  
+
   .slider::after {
     right: 0;
     top: 0;
